2009-04-24  Marek Habersack  <mhabersack@novell.com>

	* HtmlizedException.cs: make HtmlException derive from
	HttpException. System.Web.Mvc relies upon compile and parse
	exception being descendants of HttpException or otherwise it will
	catch and ignore compilation/parsing errors.

2009-04-16  Marek Habersack  <mhabersack@novell.com>

	* HttpContext.cs: local resources code now uses the custom
	resource provider factory, just like the global resources
	code. Fixes bug #493263

2009-04-15  Marek Habersack  <mhabersack@novell.com>

	* HttpApplicationFactory.cs: if a notification is received from a
	FileSystemWatcher which was configured to watch for
	subdirectories, uses a filter (currently we have just one such
	watcher - waiting for changes to '?eb.?onfig') and the event
	doesn't match the filter, ignore the event. Fixes bug #495011

2009-04-13 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* HttpUtility.cs: the collection returned from ParseQueryString knows
	how to convert the key/value pairs to a string.

2009-04-10 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* HttpResponseStream.cs: use the unsafe version when copying buffers.

2009-04-06  Marek Habersack  <mhabersack@novell.com>

	* HttpRuntime.cs: added a new internal static property
	IsDebuggingEnabled

	* HttpContext.cs: IsDebuggingEnabled now calls
	HttpRuntime.IsDebuggingEnabled

2009-04-03  Gert Driesen  <drieseng@users.sourceforge.net>

	* HttpRuntime.cs: Avoid ANE on Windows when HttpRuntime is used
	outside of ASP.NET. Fixed compiler warning by setting
	assemblyMappingEnabled.

2009-04-02  Marek Habersack  <mhabersack@novell.com>

	* HttpException.cs: if there are more lines with errors, display
	them all.

2009-03-31  Marek Habersack  <mhabersack@novell.com>

	* HttpApplicationFactory.cs: use glob patterns to watch for
	changes to global.asax and web.config files.
	Set up recursive watch on web.config in a separate thread, to
	minimize application startup delay. Fixes bug #490497
