@@ -777,6 +777,7 @@ namespace System.Web {
 
 #if !TARGET_J2EE
 		void TimeoutReached(object state) {
+			HttpRuntime.QueuePendingRequest (false);
 			if (Interlocked.CompareExchange (ref timeout_possible, 0, 0) == 0) {
 				timer.Change(2000, 0);
 				return;			
